# XBOCT-chat

./: .gitignore  Cargo.toml  Makefile.toml  bump.bat  cog.toml  package-lock.json  package.json
docs/: adr-01.md  adr-02.md  technical-specification.md
launcher/: Cargo.toml
scripts/: generate-metadata.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
