[package]
name = "XBOCT-chat"
version = "0.0.1"
description = "Ku6epXBOCTuK's chat"
authors = ["Ku6epXBOCTuK"]
license = "MIT"
repository = "https://github.com/Ku6epXBOCTuK/XBOCT-chat"
edition = "2024"
rust-version = "1.93.0"

[lib]
name = "xboct_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
