[package]
name = "XBOCT-chat"
version = "0.0.1"
description = "Ku6epXBOCTuK's chat"
authors = ["Ku6epXBOCTuK"]
license = "MIT"
repository = "https://github.com/Ku6epXBOCTuK/XBOCT-chat"
edition = "2024"
rust-version = "1.93.0"

[lib]
name = "xboct_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-log = { workspace = true }
